methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:7: error: not found: value makeV
  forward(3);left();makeV()
                    ^PictureMono2:8: error: not found: value makeV
  forward(3);left();forward(3);left();makeV()
                                      ^PictureMono2:9: error: not found: value makeV
  forward(3);left();forward(3);left();makeV()
                                      ^PictureMono2:10: error: not found: value makeV
  forward(3);left();forward(3);left();makeV()
                                      ^