methods.picture.PictureMono2.scala.code
override def run() {
  
  
  
  
  
  forward(3);left();makeV()
  forward(3);left();forward(3);left();makeV()
  forward(3);left();forward(3);left();makeV()
  forward(3);left();forward(3);left();makeV()
  forward(3);left()
}